--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -24,7 +24,7 @@ executable AdventOfCode2022
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Switcher,Utils,Days.Day1
+    other-modules:    Switcher,Utils,Days.Day1,Days.Day2
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
