--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -24,10 +24,11 @@ executable AdventOfCode2022
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Switcher,Utils,Days.Day1,Days.Day2
+    other-modules:    Switcher, Utils, 
+                      Days.Day1, Days.Day2, Days.Day3
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.17.0.0, composition ^>=1.0.2.2
+    build-depends:    base ^>=4.17.0.0, composition ^>=1.0.2.2, split ^>= 0.2.3.5
     hs-source-dirs:   app,src
     default-language: Haskell2010
