--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -24,13 +24,13 @@ executable AdventOfCode2022
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Switcher, Utils, 
+    other-modules:    Switcher, Utils, Grid
                       Days.Day1, Days.Day2, Days.Day3, Days.Day4, Days.Day5, Days.Day6,
-                      Days.Day7, Days.Day8
+                      Days.Day7, Days.Day8, Days.Day9
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.17.0.0, composition ^>=1.0.2.2, split ^>= 0.2.3.5, 
-                      containers ^>= 0.6.6, array ^>=0.5.4.0
+                      containers ^>= 0.6.6, array ^>=0.5.4.0, mtl ^>=2.2.2
     hs-source-dirs:   app,src
     default-language: Haskell2010
