--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -24,9 +24,9 @@ executable AdventOfCode2022
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Switcher, Utils, Grid
+    other-modules:    Switcher, Utils, Grid, AStar,
                       Days.Day1,  Days.Day2,  Days.Day3,  Days.Day4,  Days.Day5,  Days.Day6,
-                      Days.Day7,  Days.Day8,  Days.Day9,  Days.Day10, Days.Day11
+                      Days.Day7,  Days.Day8,  Days.Day9,  Days.Day10, Days.Day11, Days.Day12
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -35,6 +35,7 @@ executable AdventOfCode2022
                       split       ^>= 0.2.3.5, 
                       containers  ^>= 0.6.6, 
                       array       ^>=0.5.4.0, 
-                      mtl         ^>=2.2.2
+                      mtl         ^>=2.2.2,
+                      pqueue      ^>=1.4.3.0
     hs-source-dirs:   app,src
     default-language: Haskell2010
