--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -27,7 +27,7 @@ executable AdventOfCode2022
     other-modules:    Switcher, Utils, Grid, AStar, Interval,
                       Days.Day1,  Days.Day2,  Days.Day3,  Days.Day4,  Days.Day5,  Days.Day6,
                       Days.Day7,  Days.Day8,  Days.Day9,  Days.Day10, Days.Day11, Days.Day12,
-                      Days.Day13, Days.Day14, Days.Day15
+                      Days.Day13, Days.Day14, Days.Day15, Days.Day16
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
