--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -27,7 +27,8 @@ executable AdventOfCode2022
     other-modules:    Switcher, Utils, Grid, Grid3, AStar, Interval,
                       Days.Day1,  Days.Day2,  Days.Day3,  Days.Day4,  Days.Day5,  Days.Day6,
                       Days.Day7,  Days.Day8,  Days.Day9,  Days.Day10, Days.Day11, Days.Day12,
-                      Days.Day13, Days.Day14, Days.Day15, Days.Day16, Days.Day17, Days.Day18
+                      Days.Day13, Days.Day14, Days.Day15, Days.Day16, Days.Day17, Days.Day18,
+                      Days.Day19
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -41,3 +42,4 @@ executable AdventOfCode2022
                       safe        ^>=0.3.14 
     hs-source-dirs:   app,src
     default-language: Haskell2010
+    ghc-options:      -fprof-auto
