--- a/AdventOfCode2022.cabal
+++ b/AdventOfCode2022.cabal
@@ -28,7 +28,7 @@ executable AdventOfCode2022
                       Days.Day1,  Days.Day2,  Days.Day3,  Days.Day4,  Days.Day5,  Days.Day6,
                       Days.Day7,  Days.Day8,  Days.Day9,  Days.Day10, Days.Day11, Days.Day12,
                       Days.Day13, Days.Day14, Days.Day15, Days.Day16, Days.Day17, Days.Day18,
-                      Days.Day19
+                      Days.Day19, Days.Day20
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
